--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "@tanstack/react-query": "^5.66.0",
     "@types/bcrypt": "^5.0.2",
+    "@uploadthing/react": "^7.1.5",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,6 +41,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "unique-username-generator": "^1.4.0",
+    "uploadthing": "^7.4.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
