--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
@@ -34,6 +35,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
+    "postprocessing": "^6.36.7",
     "react": "^19.0.0",
     "react-babylonjs": "^3.2.2",
     "react-dom": "^19.0.0",
@@ -41,6 +43,7 @@
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
     "unique-username-generator": "^1.4.0",
     "uploadthing": "^7.4.4",
     "uuid": "^11.0.5",
