--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
     "unique-username-generator": "^1.4.0",
