--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
+    "openai": "^4.91.1",
+    "pdf-parse": "^1.1.1",
     "postprocessing": "^6.36.7",
     "react": "^19.0.0",
     "react-babylonjs": "^3.2.2",
@@ -50,6 +52,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
